--- a/app.css
+++ b/app.css
@@ -21,7 +21,7 @@ p {
 }
 
 button:hover {
-    background-color: red;
+    background-color: green;
     color: white;
 }
 
@@ -32,6 +32,7 @@ p:hover {
 p::first-line {
     color: purple;
 }
+
 
 
 
